src/test/ui/const-generics/issues/issue-73260.stderr
error[E0308]: mismatched types
  --> $DIR/issue-73260.rs:16:12
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |            ^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected type `false`
              found type `true`

error[E0308]: mismatched types
  --> $DIR/issue-73260.rs:16:32
   |
LL |     let x: Arr<{usize::MAX}> = Arr {};
   |                                ^^^ expected `false`, found `true`
   |
   = note: expected type `false`
              found type `true`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
